# MealProvider

./: .gitignore  Dockerfile  README.md  data.sql  docker-compose.yml  make_celery.py  mock_data.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.extend.yml
.github/workflows/: ci.yaml
flaskr/: __init__.py  commands.py  db.py  mock.py  tasks.py
flaskr/model/: Bill.py  Meal.py  Order.py  Restaurant.py  Review.py  User.py
flaskr/templates/: base.html
flaskr/templates/admin/: base.html  bill.html  edit_restaurant.html  index.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/clerk/: base.html  cancel_order.html  finish_order.html  index.html  new_order.html  register_customer.html  review.html
flaskr/templates/email_template/: bill_notify.html
flaskr/templates/home/: index.html  order.html
flaskr/templates/meal/: index.html  writeReview.html
flaskr/templates/restaurant/: index.html
flaskr/view/: admin.py  auth.py  clerk.py  home.py  meal.py  restaurant.py
k8s/: deploys.yaml  ingress.yaml  secret.yaml  services.yaml
tests/: conftest.py  test_auth.py
