[project]
name = "flaskr"
version = "1.0.0"
description = "The basic blog app built in the Flask tutorial."
dependencies = [
    "flask",
    "mariadb",
    "flask-sqlalchemy",
    "gunicorn",
    "celery",
    "redis",
    "Flask-Mail",
]

[project.optional-dependencies] # Optional
dev = [
    "watchdog"
]

[tool.setuptools]
py-modules = []
